Hompage Design Upgraded

--- a/Project-SPA/src/app/header/header.component.html
+++ b/Project-SPA/src/app/header/header.component.html
@@ -7,14 +7,14 @@
   </button>        
   <div class="collapse navbar-collapse" id="navbarMenu">
       <ul class="navbar-nav mr-auto">
-          <li><a class="nav-link" href="#" [routerLink]="['/home']">Home</a></li>
-          <li><a class="nav-link" href="#">About</a></li>
-          <li><a class="nav-link" href="#">Airlines</a></li>
-          <li><a class="nav-link" href="#">Rent-a-Car Services</a></li>
+          <li class="nav-item" routerLinkActive="active"><a class="nav-link" href="#" [routerLink]="['/home']"><i class="fa fa-fw fa-home"></i>Home</a></li>
+          <li><a class="nav-link" href="#"><i class="fa fa-fw fa-info"></i>About</a></li>
+          <li><a class="nav-link" href="#"><i class="fa fa-fw fa-plane"></i>Airlines</a></li>
+          <li><a class="nav-link" href="#"><i class="fa fa-fw fa-car"></i>Rent-a-Car Services</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item" routerLinkActive="active"><a class="nav-link" href="#" [routerLink]="['/register']">Register</a></li>
-          <li class="nav-item" routerLinkActive="active"><a class="nav-link" href="#" [routerLink]="['/login']">Login</a></li>
+          <li class="nav-item" routerLinkActive="active"><a class="nav-link" href="#" [routerLink]="['/register']"><i class="fa fa-fw fa-user-plus"></i>Register</a></li>
+          <li class="nav-item" routerLinkActive="active"><a class="nav-link" href="#" [routerLink]="['/login']"><i class="fa fa-fw fa-user"></i>Login</a></li>
           <!-- <li><a class="nav-link" href="#">Logout</a></li> -->
       </ul>
   </div>  
