--- a/Project-SPA/src/app/header/header.component.css
+++ b/Project-SPA/src/app/header/header.component.css
@@ -1,4 +1,30 @@
 .navbar
 {
       background-color: #333333;
+      overflow: hidden;
 }
+
+.navbar a {
+      float: left;
+      display: block;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+      /* border-bottom: 3px solid transparent; */
+    }
+    
+    .navbar a:hover {
+      border-bottom: 3px solid whitesmoke;
+      color: whitesmoke;
+    }
+
+    
+    .navbar a.active {
+      border-bottom: 3px solid whitesmoke;
+    }
+
+    a.navbar-brand:hover {
+      border-bottom: none;
+  }
+
