--- a/Project-SPA/src/app/user/register/register/register.component.html
+++ b/Project-SPA/src/app/user/register/register/register.component.html
@@ -1,3 +1,58 @@
-<p>
-  register works!
-</p>
+<div class="container mt-5">
+  <div class="container">
+      <div class="row justify-content-center">
+          <div class="col4">
+              <img src="assets/images/login.png" style="max-height: 65px;">
+              <div class="text-center">
+                  <h4>Sign Up</h4>
+                  <hr>
+                  <form [formGroup]="authService.formModel" #registerForm = "ngForm" (ngSubmit) = "register()">
+                    <div class="form-group">
+                      <div class="user">                
+                          <span class="fa fa-user"></span>
+                          <input type="text" name="firstName" formControlName = "FirstName" class="form-control" placeholder="First Name">
+                      </div> 
+                    </div>
+                    <div class="form-group">
+                      <div class="user">                
+                        <span class="fa fa-user"></span>
+                        <input type="text" name="lastName" formControlName = "LastName" class="form-control" placeholder="Last Name">
+                      </div> 
+                    </div>
+                    <div class="form-group">
+                      <div class="envelope">                
+                          <span class="fa fa-envelope"></span>
+                          <input type="text" name="email" formControlName = "Email" class="form-control" placeholder="Email address">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="password">                 
+                          <span class="fa fa-eye-slash"></span>
+                          <input type="password" name="password" formControlName = "Password" class="form-control" placeholder="Password">
+                      </div> 
+                    </div>
+                    <div class="form-group">
+                      <div class="password">                
+                        <span class="fa fa-eye-slash"></span>
+                        <input type="password" name="confirmPassword" formControlName = "confirmPassword" class="form-control" placeholder="Repeat Password">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="location">                
+                        <span class="fa fa-map-marker"></span>
+                        <input type="text" name="city" formControlName = "City" class="form-control" placeholder="City">
+                      </div> 
+                    </div>
+                    <div class="form-group">
+                      <div class="phone">                
+                        <span class="fa fa-phone"></span>
+                        <input type="text" name="telephoneNumber" formControlName = "TelephoneNumber" class="form-control" placeholder="Telephone Number">
+                      </div> 
+                    </div>
+                    <button  class="btn btn-success form-rounded" type="submit" style="width: 100px;">Register</button>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
