--- a/Project-SPA/src/app/user/login/login.component.html
+++ b/Project-SPA/src/app/user/login/login.component.html
@@ -1,3 +1,29 @@
-<p>
-  login works!
-</p>
+<div class="container mt-5">
+  <div class="container">
+      <div class="row justify-content-center">
+          <div class="col4">
+              <img src="assets/images/login.png" style="max-height: 65px;">
+              <div class="text-center">
+                  <h4>Sign In</h4>
+                  <hr>
+                  <form #loginForm="ngForm" (ngSubmit) = "login()">
+                      <div class="form-group">
+                          <div class="envelope">                
+                              <span class="fa fa-envelope"></span>
+                              <input type="text" name="email" class="form-control" placeholder="Email address" [(ngModel)]="model.email" required>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <div class="password">                
+                              <span class="fa fa-eye-slash"></span>
+                              <input type="password" name="password" class="form-control" placeholder="Password" [(ngModel)]="model.password" required>
+                          </div> 
+                      </div>
+                      <button [disabled]="!loginForm.valid" class="btn btn-success form-rounded" type="submit" style="width: 100px;">Login</button>
+                      <div class="fb-login-button" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false" data-width=""></div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
